--- a/nicepointerview/src/main/res/values/attrs.xml
+++ b/nicepointerview/src/main/res/values/attrs.xml
@@ -26,4 +26,14 @@
         <item>@integer/MO_BAI</item>
     </integer-array>
 
+    <declare-styleable name="NiceDotView">
+
+        <attr name="dotRadius" format="dimension"/>
+        <attr name="dotColor" format="color"/>
+        <attr name="dotAnimationColor" format="color"/>
+        <attr name="dotCount" format="integer"/>
+        <attr name="dotSpace" format="dimension"/>
+
+    </declare-styleable>
+
 </resources>
