--- a/nicepointerview/src/main/res/values/attrs.xml
+++ b/nicepointerview/src/main/res/values/attrs.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <declare-styleable name="NicePointerView">
         <attr name="outRadius" format="dimension"/>
@@ -8,6 +8,8 @@
         <attr name="insideColor" format="color"/>
         <attr name="lineColor" format="color"/>
         <attr name="waterWave" format="boolean"/>
+        <attr name="waterWaveMinRadius" format="dimension"/>
+        <attr name="waterWaveMaxRadius" format="dimension"/>
         <attr name="jumpStyle" format="integer"/>
         <attr name="zoomStyle" format="integer"/>
     </declare-styleable>
@@ -26,14 +28,41 @@
         <item>@integer/MO_BAI</item>
     </integer-array>
 
-    <declare-styleable name="NiceDotView">
-
+    <declare-styleable name="NiceDotLoadingView">
         <attr name="dotRadius" format="dimension"/>
         <attr name="dotColor" format="color"/>
         <attr name="dotAnimationColor" format="color"/>
         <attr name="dotCount" format="integer"/>
         <attr name="dotSpace" format="dimension"/>
-
     </declare-styleable>
+
+
+    <declare-styleable name="NicePopLayout">
+        <attr name="radiusSize" format="dimension" />
+        <attr name="bulgeSize" format="dimension" />
+        <attr name="offsetSize" format="dimension" />
+        <attr name="siteMode" format="enum">
+            <enum name="top" value="0" />
+            <enum name="left" value="1" />
+            <enum name="right" value="2" />
+            <enum name="bottom" value="3" />
+        </attr>
+    </declare-styleable>
+
+
+    <declare-styleable name="BubbleLayout">
+        <attr name="background_color" format="color" />
+        <attr name="shadow_color" format="color" />
+        <attr name="shadow_size" format="dimension" />
+        <attr name="radius" format="dimension" />
+        <attr name="direction" format="enum">
+            <enum name="left" value="1" />
+            <enum name="top" value="2" />
+            <enum name="right" value="3" />
+            <enum name="bottom" value="4" />
+        </attr>
+        <attr name="offset" format="dimension" />
+    </declare-styleable>
+
 
 </resources>
